--- a/ProjectUAS_EzBooking_Client/src/Restaurant/FormListReservation.form
+++ b/ProjectUAS_EzBooking_Client/src/Restaurant/FormListReservation.form
@@ -145,6 +145,9 @@
                   <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tableReservationMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
